--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-cloud": "4.20.0",
     "@strapi/plugin-i18n": "4.20.0",
     "@strapi/plugin-users-permissions": "4.20.0",
+    "@strapi/provider-email-nodemailer": "^4.20.5",
     "@strapi/strapi": "4.20.0",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.3",
