--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@strapi/plugin-users-permissions": "4.20.0",
     "@strapi/provider-email-nodemailer": "^4.20.5",
     "@strapi/strapi": "4.20.0",
+    "axios": "^1.6.8",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-multi-select": "^1.2.3",
     "strapi-utils": "^3.6.11",
     "styled-components": "5.3.3"
   },
